# SNNProject

./: CMakeLists.txt  Dockerfile  main.cpp
.devcontainer/: devcontainer.json
src/: LIFNeuron.cpp  LIFNeuron.hpp  SNNNetwork.cpp  SNNNetwork.hpp
